tests/ui/consts/const-block-const-bound.stderr
error[E0658]: use of unstable library feature `const_destruct`
  --> $DIR/const-block-const-bound.rs:6:5
   |
LL | use std::marker::Destruct;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #10 <https://github.com/rust-lang/rust/issues/10> for more information
   = help: add `#![feature(const_destruct)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `const_destruct`
  --> $DIR/const-block-const-bound.rs:8:22
   |
LL | const fn f<T: ~const Destruct>(x: T) {}
   |                      ^^^^^^^^
   |
   = note: see issue #10 <https://github.com/rust-lang/rust/issues/10> for more information
   = help: add `#![feature(const_destruct)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-block-const-bound.rs:8:15
   |
LL | const fn f<T: ~const Destruct>(x: T) {}
   |               ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-block-const-bound.rs:8:15
   |
LL | const fn f<T: ~const Destruct>(x: T) {}
   |               ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0493]: destructor of `T` cannot be evaluated at compile-time
  --> $DIR/const-block-const-bound.rs:8:32
   |
LL | const fn f<T: ~const Destruct>(x: T) {}
   |                                ^      - value is dropped here
   |                                |
   |                                the destructor for this type cannot be evaluated in constant functions

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0493, E0658.
For more information about an error, try `rustc --explain E0493`.
